# Settings

./: .gitignore  CHANGELOG.md  LICENSE  README.md  app.py  generate-linux-icons.sh  pyproject.toml
.github/workflows/: README.md  build-release.old.yml  build-release.yml  build-windows-debug.yml
src/cpcreadyconfig/: __init__.py  __main__.py  app.py
src/cpcreadyconfig.dist-info/: METADATA  top_level.txt
